[WFCORE-5438] For modular VMs include --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED